INTELLIJ-232 SF